--- a/.github/actions/react-build/action.yml
+++ b/.github/actions/react-build/action.yml
@@ -1,51 +1,28 @@
 name: "React Build Action"
-description: "Composite action to build and test a React WebApp"
+description: "Install, build, and test a React app"
 
 inputs:
   node_version:
     description: "Node.js version"
-    required: false
     default: "20"
-  working_directory:
-    description: "Path to React app"
-    required: false
-    default: "."
-  install_command:
-    description: "Install dependencies command"
-    required: false
-    default: "npm install"
-  build_command:
-    description: "Build command"
-    required: false
-    default: "npm run build"
-  test_command:
-    description: "Test command"
-    required: false
-    default: "npm test"
 
 runs:
   using: "composite"
   steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-
-    - name: Set up Node.js
+    - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: ${{ inputs.node_version }}
 
     - name: Install dependencies
-      run: ${{ inputs.install_command }}
+      run: npm install
       shell: bash
-      working-directory: ${{ inputs.working_directory }}
 
-    - name: Build project
-      run: ${{ inputs.build_command }}
+    - name: Build React app
+      run: npm run build
       shell: bash
-      working-directory: ${{ inputs.working_directory }}
 
     - name: Run tests
-      run: ${{ inputs.test_command }}
+      run: npm test -- --watchAll=false
       shell: bash
-      working-directory: ${{ inputs.working_directory }}
 
